2006-05-06  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: releasing version 0.24.15.1 of fink-mirrors

2006-05-06  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* _urls, anonymous-cvs, developer-cvs, inject.pl, install.sh: add 
	anonymous-cvs to store URL for anonymous CVS access; also, change
	the format of anonymous-cvs and developer-cvs to include the CVS
	Root path

2006-05-02  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* _urls, developer-cvs, inject.pl, install.sh: add developer-cvs to 
	store URL for non-anonymous CVS access

2006-01-03  Daniel Macks  <dmacks@netspace.org>

	* inject.pl, install.sh, postinstall.pl.in: updated Copyright notice

2005-12-02  Daniel Macks  <dmacks@netspace.org>

	* inject.pl, postinstall.pl.in: Fink core is coded assuming perl
	>= 5.8.1 now.

2005-10-15 Max Horn  <max@quendi.de>

	* gnu: Updated mirror list.

2005-09-25  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: releasing version 0.24.10.1 of fink-mirrors

2005-09-16  Peter O'Gorman  <ogorman@users.sourceforge.net>

	* apt: Add todai teams bindist mirror. Thanks Asari-san.

2005-08-14  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: releasing version 0.24.8.1 of fink-mirrors

2005-07-21 Max Horn  <max@quendi.de>

	* all mirror files: Added URL pointing to the official mirror list
	for that mirror set.
	* gnome: Updated mirror list.

2005-07-18 Max Horn  <max@quendi.de>

	* debian: Fixed primary mirror URL; updated list to most current.

2005-04-22  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* apt: switch from sourceforge to bindist.finkmirrors.net
	* VERSION: releasing version 0.24.4.1 of fink-mirrors

2005-04-21  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* _keys: added Colombia

2005-04-16  David H <dmalloc@users.sourceforge.net>

	* rsync: Clean up of dead and unmaintained mirrors

2005-04-16  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: releasing version 0.24.3.1 of fink-mirrors
