@@ -1,1 +1,1 @@
-cvs.sourceforge.net:/cvsroot/fink
+fink.cvs.sourceforge.net:/cvsroot/fink
