@@ -1,1 +1,1 @@
-cvs.sourceforge.net
+fink.cvs.sourceforge.net
